# TrueNAS-AIops

./: .coverage  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
docs/: VERIFICATION.md
mcp_server/: __init__.py  _shared.py  server.py
mcp_server/tools/: alerts.py  datasets.py  diagnostics.py  disks.py  overview.py  pools.py  replication.py  services.py  snapshots.py  system.py  undo.py
skills/truenas-aiops/: SKILL.md
skills/truenas-aiops/references/: agent-guardrails.md  capabilities.md  cli-reference.md  setup-guide.md
tests/: conftest.py  test_cli_commands.py  test_cli_writes.py  test_config_scheme.py  test_connection.py  test_doctor.py  test_gov_audit.py  test_gov_decorators.py  test_gov_patterns.py  test_gov_policy.py  test_governance_persistence.py  test_init.py  test_mcp_tools.py  test_ops_diagnostics.py  test_ops_read.py  test_optional_fields.py  test_readonly.py  test_secretstore.py  test_smoke.py  test_undo_executor.py  test_version_support.py
truenas_aiops/: __init__.py  config.py  connection.py  doctor.py  secretstore.py  version_support.py
truenas_aiops/cli/: __init__.py  _common.py  _root.py  alert.py  dataset.py  diagnostics.py  disk.py  doctor.py  init.py  overview.py  pool.py  replication.py  secret.py  service.py  snapshot.py  system.py  undo.py
truenas_aiops/governance/: __init__.py  audit.py  budget.py  decorators.py  paths.py  patterns.py  policy.py  readonly.py  sanitize.py  undo.py
truenas_aiops/ops/: __init__.py  _util.py  alerts.py  datasets.py  diagnostics.py  disks.py  overview.py  pools.py  replication.py  services.py  snapshots.py  system.py
